--- a/pisync/pisync-receiver.conf
+++ b/pisync/pisync-receiver.conf
@@ -1,3 +1,3 @@
-FILE_TO_WATCH="/etc/pihole/hosts/custom.list"
+FILE_TO_WATCH="/opt/pisync/custom.list"
 SCRIPT_TO_RUN="/opt/pisync/pisync-receiver.sh"
 EXEC_ON_START="true"
